.k8s/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graph-docs
spec:
  replicas: 5
