.k8s/production/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: graph-docs
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: thegraph.com
      http:
        paths:
          - path: /docs
            backend:
              serviceName: graph-docs
              servicePort: http
